[package]
name = "os"
version = "0.1.0"
authors = ["cjz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/
# reference/manifest.html

# When panic occur abort!
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = {path = "src/riscv"}
buddy_system_allocator = {path = "src/buddy_system_allocator"}

